# robomaster-2022-cv

./: .gitignore  .gitmodules  readme.md
detection/: AllianceVsArtisans_BO2_2_1.xml  README.md
detection/darknet/: Makefile  darknet
detection/darknet/cfg/: dji.data  yolov3_custom.cfg
detection/data/: dji.data  dji.names  test_data.txt  train_data.txt  yolov3_custom.cfg
detection/data_processing/: image_zooming.py  label_processing.py
detection/dataset/robomaster_Central China Regional Competition/: robomaster_Central China Regional Competition.txt
detection/dataset/robomaster_Central China Regional Competition/image_annotation/: AllianceVsArtisans_BO2_2_0.xml  AllianceVsArtisans_BO2_2_1_0.xml  AllianceVsArtisans_BO2_2_1_1.xml  AllianceVsArtisans_BO2_2_1_2.xml  AllianceVsArtisans_BO2_2_1_3.xml  AllianceVsArtisans_BO2_2_1_4.xml  AllianceVsArtisans_BO2_2_1_5.xml  AllianceVsArtisans_BO2_2_2.xml  AllianceVsArtisans_BO2_2_3.xml  AllianceVsArtisans_BO2_2_4.xml  AllianceVsArtisans_BO2_2_5.xml  AllianceVsArtisans_BO2_2_6.xml
detection/dataset/robomaster_Central China Regional Competition/labels/: AllianceVsArtisans_BO2_2_1.txt  AllianceVsArtisans_BO2_2_1_0.txt  AllianceVsArtisans_BO2_2_1_1.txt  AllianceVsArtisans_BO2_2_1_2.txt  AllianceVsArtisans_BO2_2_1_3.txt  AllianceVsArtisans_BO2_2_1_4.txt  AllianceVsArtisans_BO2_2_1_5.txt
detection/exemple/: vid_test_pred.avi
detection/patch/: Makefile  deepstream_source_bin.c
doc/: detection-node.md  docker_ros_img_from_scratch.md  monitor.md  pipeline_on_jetson_from_scratch.md  ros-architecture.md  ros_from_scratch.md  serial.md
doc/nwpu-v5-team/: 0.-Introduction.md  1.-Structure.md  2.-Compilation.md  3.-Code-structure.md  4.-Algorithm-robot-camera.md  5.-Algorithm-outpost-camera.md  6.-Reference.md
ros_ws/: .gitignore  image_view.launch  robomaster.launch  test_video_resource.py  video_sender.launch
ros_ws/data/: deepstream-infer.txt  deepstream_app_config.txt  param-decision.yaml  param-serial.yaml  param-yolo-tiny.yaml  param-yolo.yaml
ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros_ws/devel/include/detection/: Detection.h  Detections.h
ros_ws/devel/include/serial/: HP.h  Rune.h  SwitchOrder.h  Target.h
ros_ws/devel/include/tracking/: Tracklet.h  Tracklets.h
ros_ws/devel/lib/detection/: detection
ros_ws/devel/lib/jetson_camera/: jetson_camera_node
ros_ws/devel/lib/monitor/: monitor_logger  monitor_video
ros_ws/devel/lib/pkgconfig/: detection.pc  jetson_camera.pc  monitor.pc  serial.pc  testing.pc  tracking.pc
ros_ws/devel/lib/python3/dist-packages/detection/msg/: _Detection.py  _Detections.py  __init__.py
ros_ws/devel/lib/python3/dist-packages/motpy/: __init__.py
ros_ws/devel/lib/python3/dist-packages/serial/msg/: _HP.py  _Rune.py  _SwitchOrder.py  _Target.py  __init__.py
ros_ws/devel/lib/python3/dist-packages/tracking/msg/: _Tracklet.py  _Tracklets.py  __init__.py
ros_ws/devel/lib/serial/: serial_interface
ros_ws/devel/lib/testing/: serial_testing
ros_ws/devel/lib/tracking/: detection_test.py  track.py
ros_ws/devel/share/common-lisp/ros/detection/msg/: Detection.lisp  Detections.lisp  _package.lisp  _package_Detection.lisp  _package_Detections.lisp  detection-msg.asd
ros_ws/devel/share/common-lisp/ros/serial/msg/: HP.lisp  Rune.lisp  SwitchOrder.lisp  Target.lisp  _package.lisp  _package_HP.lisp  _package_Rune.lisp  _package_SwitchOrder.lisp  _package_Target.lisp  serial-msg.asd
ros_ws/devel/share/common-lisp/ros/tracking/msg/: Tracklet.lisp  Tracklets.lisp  _package.lisp  _package_Tracklet.lisp  _package_Tracklets.lisp  tracking-msg.asd
ros_ws/devel/share/detection/cmake/: detection-msg-extras.cmake  detection-msg-paths.cmake  detectionConfig.cmake
ros_ws/devel/share/gennodejs/ros/serial/msg/: HP.js  (+4 more)
ros_ws/devel/share/jetson_camera/cmake/: jetson_cameraConfig.cmake
ros_ws/devel/share/monitor/cmake/: monitorConfig.cmake
ros_ws/devel/share/roseus/ros/detection/: manifest.l
ros_ws/devel/share/roseus/ros/serial/: manifest.l
ros_ws/devel/share/roseus/ros/tracking/: manifest.l
ros_ws/devel/share/serial/cmake/: serial-msg-extras.cmake  serial-msg-paths.cmake  serialConfig.cmake
ros_ws/devel/share/testing/cmake/: testingConfig.cmake
ros_ws/devel/share/tracking/cmake/: tracking-msg-extras.cmake  tracking-msg-paths.cmake  trackingConfig.cmake
ros_ws/src/decision/: CMakeLists.txt  package.xml
ros_ws/src/decision/launch/: simple_decision.launch
ros_ws/src/decision/src/: simple_tracker.cpp  tracker_sentry.cpp
ros_ws/src/detection/: CMakeLists.txt  package.xml
ros_ws/src/detection/include/: deepstream_detector.hpp  detector.hpp
ros_ws/src/detection/launch/: detection.launch
ros_ws/src/detection/msg/: Detection.msg  Detections.msg
ros_ws/src/detection/scripts/: detect.py  detection.py
ros_ws/src/detection/src/: deepstream_detector.cpp  deepstream_node.cpp  detection_node.cpp  detector.cpp
ros_ws/src/detection/src/deepstream-app/: deepstream_app.c  deepstream_app_main.c
ros_ws/src/monitor/: CMakeLists.txt  package.xml
ros_ws/src/monitor/include/: video_monitor.hpp
ros_ws/src/monitor/launch/: monitor.launch
ros_ws/src/monitor/src/: monitor_video_node.cpp  video_monitor.cpp
ros_ws/src/serial/: CMakeLists.txt  package.xml
ros_ws/src/serial/include/: protocol.hpp  serial_spinner.hpp
ros_ws/src/serial/launch/: serial.launch
ros_ws/src/serial/msg/: HP.msg  Rune.msg  SwitchOrder.msg  Target.msg
ros_ws/src/serial/src/: serial_interface.cpp  serial_spinner.cpp
ros_ws/src/testing/: CMakeLists.txt  package.xml
ros_ws/src/testing/launch/: test-serial.launch
ros_ws/src/testing/src/: serial_testing.cpp
ros_ws/src/tracking/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/tracking/launch/: tracking.launch
ros_ws/src/tracking/motpy/: tracker.py
ros_ws/src/tracking/msg/: Tracklet.msg  Tracklets.msg
ros_ws/src/tracking/scripts/: detection_test.py  track.py  tracking.py
ros_ws/src/tracking/scripts/TP3_data/TP3_data/: init.txt  readme.txt
ros_ws/src/tracking/src/: monitor_logger.cpp  monitor_video_node.cpp
(+14 files in other folders)
