<?xml version="1.0"?>
<package format="2">
  <name>serial</name>
  <version>0.1.0</version>
  <description>Serial interface to the Control and Systems team board A</description>

  <maintainer email="sebastien.darche@polymtl.ca">Sébastien Darche</maintainer>

  <license>MIT</license>

  <author email="sebastien.darche@polymtl.ca">Sébastien Darche</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>

</package>
