<?xml version="1.0"?>
<package format="2">
  <name>tracking</name>
  <version>0.1.0</version>
  <description>Bounding box tracking</description>

  <maintainer email="sebastien.darche@polymtl.ca">Sébastien Darche</maintainer>

  <license>MIT</license>

  <author email="sebastien.darche@polymtl.ca">Sébastien Darche</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>detection</depend>
  
  <export></export>

</package>
